[gd_scene load_steps=3 format=3 uid="uid://b7yweq5b3pig1"]

[ext_resource type="Script" path="res://dig_site/dig_grid_tile_ui.gd" id="1_vkbty"]
[ext_resource type="PackedScene" uid="uid://ctm7hiqpl4u5r" path="res://dig_site/TopOutline.tscn" id="2_fm17a"]

[node name="DigGridTileUI" type="Node2D"]
script = ExtResource("1_vkbty")

[node name="TopOutline" parent="." instance=ExtResource("2_fm17a")]

[node name="TopPolygon" type="Polygon2D" parent="."]
polygon = PackedVector2Array(0, 0, 40, 0, 20, 40, -20, 40)

[node name="NorthLayers" type="Node2D" parent="."]

[node name="WestLayers" type="Node2D" parent="."]

[node name="SouthLayers" type="Node2D" parent="."]

[node name="EastLayers" type="Node2D" parent="."]

[node name="MouseArea" type="Area2D" parent="."]

[node name="MouseAreaShape" type="CollisionPolygon2D" parent="MouseArea"]
